@@ -447,6 +447,7 @@ void show_login()
 }
 
 extern show_debug(GtkObject *);
+
 int main(int argc, char *argv[])
 {
 #ifdef USE_APPLET
@@ -460,6 +461,12 @@ int main(int argc, char *argv[])
 
         set_defaults();
         load_prefs();
+
+	if (general_options & OPT_GEN_CHECK_VERSIONS)
+	{
+		check_gaim_versions();
+	}
+
 	if (general_options & OPT_GEN_DEBUG)
 		show_debug(NULL);
 
